--- a/index.html
+++ b/index.html
@@ -40,49 +40,51 @@
              above -->
       <header class="site-header" role="banner">
 
-         <!-- NAVBAR -->
-         <div class="navbar-wrapper">
+      <!-- NAVBAR B.4 -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+         <div class="container">
+            <a class="navbar-brand" href="#"><img src="assets/img/LogoLong.jpg" id="logoSmall" alt="W's the Dealer"/></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+            </button>
 
-            <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-               <div class="container">
-                  <div class="navbar-header">
-                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                     </button>
-                     <a class="navbar-brand" href="/"><img src="assets/img/WDLogoSmall.png" id="logoSmall" alt="W's the Dealer"/></a>
-                  </div><!-- header -->
-                  <div class="navbar-collapse collapse">
-                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="/">Home</a></li>
-                        <li><a href="product.html">Products</a></li>
-                        <li><a href="aboutus.html">About us</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                     </ul>
-                  </div><!-- navbar-collapse -->
-               </div><!-- container -->
-            </div><!-- navbar header -->
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 
+               <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                  <li class="nav-item active">
+                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#">Products</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#">About us</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#">Contact</a>
+                  </li>
+               </ul>
+            </div><!-- collapse -->
+         </div><!-- container -->
 
-         </div> <!-- navbar-wrapper -->
+      </nav>
+
 
       </header>
 
       <!-- DISCOUNT CAMPAIGN -->
-      <section id="discountCampaign" data-type="background" data-speed="5">
+      <section id="discountCampaign" data-type="background" data-speed="10">
          <article>
             <div class="container clearfix">
                <div class="row">
 
                   <div class="col-sm-5">
-                     <img src="assets/img/WDLogo.png" alt="W's the Dealer" class="logo">
+                     <img src="assets/img/LogoSmallWhite.jpg" alt="W's the Dealer" class="logo">
                   </div><!-- col -->
 
                   <div class="col-sm-7 discount-text">
                      <h1>Discount Campaign</h1>
-                     <p class="lead">Buy <strong>2 bottles get 1 FREE</strong> of the same kind</p>
+                     <h2>Buy <strong>2 bottles get 1 FREE</strong> of the same kind</h2>
                      <div id="price-timeline">
                         <div class="price">
                            <h4>Cordyceps Gold <br /><small>2 + 1 FREE</small></h4>
@@ -125,99 +127,6 @@
          </div><!-- container -->
       </section>
 
-      <!-- PRODUCT -->
-      <section id="allProducts">
-         <div class="container clearfix">
-            <div class="row">
-               <div class="col-sm-4">
-                  <img src="assets/img/Cordyceps1.jpg" alt="Cordyceps" class="product productCordyceps"/>
-                  <h1>Cordyceps Gold</h1>
-                  <p>Cordyceps are a type of fungus, better known as a species of edible medicinal, nutritionally beneficial mushrooms ...</p>
-                  <p><a href="/" role="button">Read more ...</a></p>
-               </div><!-- col -->
-
-               <div class="col-sm-4">
-                  <img src="assets/img/RedCorshiPlus1.jpg" alt="Red Corshi Plus" class="product productRedCorshiPlus"/>
-                  <h1>Red Corshi Plus</h1>
-                  <p>Cordyceps and reishi are types of fungi historically used as natural medicines in China, Japan, Korea and USA ...</p>
-                  <p><a href="/" role="button">Read more ...</a></p>
-               </div><!-- col -->
-
-               <div class="col-sm-4">
-                  <img src="assets/img/Omega1.jpg" alt="Omega" class="product productOmega"/>
-                  <h1>Omega-3</h1>
-                  <p>Omega-3 has the conditions affecting the circulatory system, decreases depression, improves eye visions ...</p>
-                  <p><a href="/" role="button">Read more ...</a></p>
-               </div><!-- col -->
-
-            </div><!-- row -->
-         </div><!-- container -->
-      </section><!-- PRODUCT -->
-
-      <!-- PRODUCT 1 -->
-      <section>
-
-      </section>
-
-      <!-- PRODUCT 2 -->
-      <section>
-
-      </section>
-
-      <!-- PRODUCT 3 -->
-      <section>
-
-      </section>
-
-      <!-- ABOUT US -->
-      <section id="aboutUs">
-         <div class="container">
-            <div class="section-header">
-               <h2>About us</h2>
-            </div><!-- section.header -->
-            <div class="row">
-
-               <div class="col-sm-7">
-
-                  <div class="row">
-                     <div class="col-sm-6 offset-sm-3">
-                        <img src="assets/img/WDLogo.png" alt="Chart"/ class="logo">
-                     </div><!-- mini col -->
-                  </div><!-- mini row -->
-
-                  <div class="row">
-
-                     <div class="col-sm-6 offset-sm-3">
-                        <p>Wayne is a dealer, retailer from Daily Life Inc.</p>
-                     </div><!-- mini col -->
-
-                  </div><!-- mini row -->
-
-               </div><!-- col -->
-
-               <div class="col-sm-5">
-                  <img src="assets/img/Wayne.jpg" alt="Wayne picture" />
-               </div><!-- col -->
-
-            </div><!-- row -->
-         </div><!-- container -->
-      </section><!-- aboutUs -->
-
-      <!-- VIDEO -->
-      <section>
-
-      </section>
-
-      <!-- CONTACT -->
-      <section>
-
-      </section>
-
-      <!-- FOOTER -->
-      <section>
-
-      </section>
-
       <!-- MODAL -->
       <div class="modal fade" id="myModal">
          <div class="modal-dialog">
@@ -251,6 +160,114 @@
             </div><!-- modal-content -->
          </div><!-- modal-dialog -->
       </div><!-- modal -->
+
+      <!-- PRODUCT -->
+      <section id="allProducts">
+         <div class="container clearfix">
+            <div class="row">
+               <div class="col-sm-4">
+                  <img src="assets/img/Cordyceps1.jpg" alt="Cordyceps" class="product productCordyceps"/>
+                  <h2>Cordyceps Gold</h2>
+                  <p>Cordyceps are a type of fungus, better known as a species of edible medicinal, nutritionally beneficial mushrooms ...</p>
+                  <p><a href="/" role="button">Read more ...</a></p>
+               </div><!-- col -->
+
+               <div class="col-sm-4">
+                  <img src="assets/img/RedCorshiPlus1.jpg" alt="Red Corshi Plus" class="product productRedCorshiPlus"/>
+                  <h2>Red Corshi Plus</h2>
+                  <p>Cordyceps and reishi are types of fungi historically used as natural medicines in China, Japan, Korea and USA ...</p>
+                  <p><a href="/" role="button">Read more ...</a></p>
+               </div><!-- col -->
+
+               <div class="col-sm-4">
+                  <img src="assets/img/Omega1.jpg" alt="Omega" class="product productOmega"/>
+                  <h2>Omega-3</h2>
+                  <p>Omega-3 has the conditions affecting the circulatory system, decreases depression, improves eye visions ...</p>
+                  <p><a href="/" role="button">Read more ...</a></p>
+               </div><!-- col -->
+
+            </div><!-- row -->
+         </div><!-- container -->
+      </section><!-- PRODUCT -->
+
+      <!-- PRODUCT 1 -->
+      <section>
+
+      </section>
+
+      <!-- PRODUCT 2 -->
+      <section>
+
+      </section>
+
+      <!-- VIDEO -->
+      <section id="video" data-type="background" data-speed="10">
+         <div class="container">
+            <div class="row">
+               <div class="col-sm-8 offset-sm-2">
+                  <h2>Video</h2>
+                  <iframe width="100%" height="415" src="https://www.youtube.com/embed/0Q2ATY_zmNo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+               </div><!-- col -->
+            </div><!-- row -->
+         </div><!-- container -->
+      </section><!-- video -->
+
+      <!-- ABOUT US -->
+      <section id="aboutUs">
+         <div class="container">
+            <div class="section-header">
+               <h2>About us</h2>
+            </div><!-- section.header -->
+            <div class="row">
+
+               <div class="col-sm-7 col-md-6">
+
+                  <div class="row">
+                     <div class="col-sm-8 offset-sm-2">
+                        <img src="assets/img/LogoLongWhite.jpg" alt="Chart"/ class="logo">
+                     </div><!-- mini col -->
+                  </div><!-- mini row -->
+
+                  <div class="row">
+
+                     <div class="col-lg-8">
+                        <h2>Your Dealer <small>Hoang Phan</small></h2>
+                     </div><!-- mini col -->
+
+                     <div class="col-lg-4">
+                        <a href="https://www.facebook.com/waynesthedealer/" target="_blank" class="badge social facebook"><i class="fa fa-facebook"></i></a>
+                     </div><!-- mini col -->
+
+                  </div><!-- mini row -->
+
+                  <p class="lead">Wayne is a dealer, retailer from Daily Life Inc.</p>
+
+               </div><!-- col -->
+
+               <div class="col-sm-5 col-md-6">
+                  <img src="assets/img/Wayne.jpg" alt="Wayne picture" />
+               </div><!-- col -->
+
+            </div><!-- row -->
+         </div><!-- container -->
+      </section><!-- aboutUs -->
+
+      <!-- VIDEO -->
+      <section>
+
+      </section>
+
+      <!-- CONTACT -->
+      <section>
+
+      </section>
+
+      <!-- FOOTER -->
+      <section>
+
+      </section>
+
+
 
       <!-- BOOTSTRAP CORE JAVASCRIPT
             Placed at the end of the document so the pages load faster -->
