--- a/index.html
+++ b/index.html
@@ -79,43 +79,43 @@
 
       </header>
 
-      <!-- DISCOUNT CAMPAIGN -->
-      <section id="discountCampaign" data-type="background" data-speed="2">
-         <article>
-            <div class="container clearfix">
-               <div class="row">
+            <!-- DISCOUNT CAMPAIGN -->
+            <section id="discountCampaign" data-type="background" data-speed="2">
+               <article>
+                  <div class="container clearfix">
+                     <div class="row">
 
-                  <div class="col-sm-5">
-                     <img src="assets/img/LogoSmallWhite.jpg" alt="W's the Dealer" class="logo">
-                  </div><!-- col -->
+                        <div class="col-sm-5">
+                           <img src="assets/img/LogoSmallWhite.jpg" alt="W's the Dealer" class="logo">
+                        </div><!-- col -->
 
-                  <div class="col-sm-7 discount-text">
-                     <h1>Discount Campaign</h1>
-                     <h2>Buy <strong>2 bottles get 1 FREE</strong> of the same kind</h2>
-                     <div id="price-timeline">
-                        <div class="price">
-                           <h3><a href="cordycepsgold.html" id="discount-title">Cordyceps Gold</a> <br /><small>2 + 1 FREE</small></h3>
+                        <div class="col-sm-7 discount-text">
+                           <h1>Discount Campaign</h1>
+                           <h2>Buy <strong>2 bottles get 1 FREE</strong> of the same kind</h2>
+                           <div id="price-timeline">
+                              <div class="price">
+                                 <h3><a href="cordycepsgold.html" class="discount-title">Cordyceps Gold</a><br /><small>2 + 1 FREE</small></h3>
 
-                           <span>$90</span>
-                        </div>
-                        <div class="price">
-                           <h3><a href="redcorshiplus.html" id="discount-title">Red Corshi Plus <br /><small>2 + 1 FREE</small></h3>
+                                 <span>$90</span>
+                              </div>
+                              <div class="price">
+                                 <h3><a href="redcorshiplus.html" class="discount-title">Red Corshi Plus</a><br /><small>2 + 1 FREE</small></h3>
 
-                           <span>$120</span>
-                        </div>
-                        <div class="price">
-                           <h3><a href="omega.html" id="discount-title">Omega-3 <br />
-                              <small>2 + 1 FREE</small></h3>
+                                 <span>$120</span>
+                              </div>
+                              <div class="price">
+                                 <h3><a href="omega.html" class="discount-title">Omega-3</a><br />
+                                    <small>2 + 1 FREE</small></h3>
 
-                           <span>$40</span>
-                        </div>
-                     </div><!-- price-timeline -->
-                  </div><!-- col -->
+                                 <span>$40</span>
+                              </div>
+                           </div><!-- price-timeline -->
+                        </div><!-- col -->
 
-               </div><!-- row -->
-            </div><!-- container -->
-         </article>
-      </section><!-- Discount Campaign -->
+                     </div><!-- row -->
+                  </div><!-- container -->
+               </article>
+            </section><!-- Discount Campaign -->
 
       <!-- OPT IN SECTION -->
       <section id="optin">
@@ -174,21 +174,21 @@
             <div class="row">
                <div class="col-sm-4">
                   <a href="cordycepsgold.html"><img src="assets/img/Cordyceps1.jpg" alt="Cordyceps" class="product product-photo"/></a>
-                  <a href="cordycepsgold.html"><h2 id="product-title">Cordyceps Gold</h2></a>
+                  <a href="cordycepsgold.html"><h2 class="product-title">Cordyceps Gold</h2></a>
                   <p>Cordyceps are a type of fungus, better known as a species of edible medicinal, nutritionally beneficial mushrooms ...</p>
                   <p><a href="/" role="button"><em>Read more ...</em></a></p>
                </div><!-- col -->
 
                <div class="col-sm-4">
                   <a href="redcorshiplus.html"><img src="assets/img/RedCorshiPlus1.jpg" alt="Red Corshi Plus" class="product product-photo"/></a>
-                  <a href="redcorshiplus.html"><h2 id="product-title">Red Corshi Plus</h2></a>
+                  <a href="redcorshiplus.html"><h2 class="product-title">Red Corshi Plus</h2></a>
                   <p>Cordyceps and reishi are types of fungi historically used as natural medicines in China, Japan, Korea and USA ...</p>
                   <p><a href="/" role="button"><em>Read more ...</em></a></p>
                </div><!-- col -->
 
                <div class="col-sm-4">
                   <a href="omega.html"><img src="assets/img/Omega1.jpg" alt="Omega" class="product product-photo"/></a>
-                  <a href="omega.html"><h2 id="product-title">Omega-3</h2></a>
+                  <a href="omega.html"><h2 class="product-title">Omega-3</h2></a>
                   <p>Omega-3 has the conditions affecting the circulatory system, decreases depression, improves eye visions ...</p>
                   <p><a href="/" role="button"><em>Read more ...</em></a></p>
                </div><!-- col -->
