--- a/cordycepsgold.html
+++ b/cordycepsgold.html
@@ -79,43 +79,43 @@
 
       </header>
 
-      <!-- DISCOUNT CAMPAIGN -->
-      <section id="discountCampaign" data-type="background" data-speed="2">
-         <article>
-            <div class="container clearfix">
-               <div class="row">
+            <!-- DISCOUNT CAMPAIGN -->
+            <section id="discountCampaign" data-type="background" data-speed="2">
+               <article>
+                  <div class="container clearfix">
+                     <div class="row">
 
-                  <div class="col-sm-5">
-                     <img src="assets/img/LogoSmallWhite.jpg" alt="W's the Dealer" class="logo">
-                  </div><!-- col -->
+                        <div class="col-sm-5">
+                           <img src="assets/img/LogoSmallWhite.jpg" alt="W's the Dealer" class="logo">
+                        </div><!-- col -->
 
-                  <div class="col-sm-7 discount-text">
-                     <h1>Discount Campaign</h1>
-                     <h2>Buy <strong>2 bottles get 1 FREE</strong> of the same kind</h2>
-                     <div id="price-timeline">
-                        <div class="price">
-                           <h3><a href="cordycepsgold.html" id="discount-title">Cordyceps Gold</a> <br /><small>2 + 1 FREE</small></h3>
+                        <div class="col-sm-7 discount-text">
+                           <h1>Discount Campaign</h1>
+                           <h2>Buy <strong>2 bottles get 1 FREE</strong> of the same kind</h2>
+                           <div id="price-timeline">
+                              <div class="price">
+                                 <h3><a href="cordycepsgold.html" class="discount-title">Cordyceps Gold</a><br /><small>2 + 1 FREE</small></h3>
 
-                           <span>$90</span>
-                        </div>
-                        <div class="price">
-                           <h3><a href="redcorshiplus.html" id="discount-title">Red Corshi Plus <br /><small>2 + 1 FREE</small></h3>
+                                 <span>$90</span>
+                              </div>
+                              <div class="price">
+                                 <h3><a href="redcorshiplus.html" class="discount-title">Red Corshi Plus</a><br /><small>2 + 1 FREE</small></h3>
 
-                           <span>$120</span>
-                        </div>
-                        <div class="price">
-                           <h3><a href="omega.html" id="discount-title">Omega-3 <br />
-                              <small>2 + 1 FREE</small></h3>
+                                 <span>$120</span>
+                              </div>
+                              <div class="price">
+                                 <h3><a href="omega.html" class="discount-title">Omega-3</a><br />
+                                    <small>2 + 1 FREE</small></h3>
 
-                           <span>$40</span>
-                        </div>
-                     </div><!-- price-timeline -->
-                  </div><!-- col -->
+                                 <span>$40</span>
+                              </div>
+                           </div><!-- price-timeline -->
+                        </div><!-- col -->
 
-               </div><!-- row -->
-            </div><!-- container -->
-         </article>
-      </section><!-- Discount Campaign -->
+                     </div><!-- row -->
+                  </div><!-- container -->
+               </article>
+            </section><!-- Discount Campaign -->
 
       <!-- PRODUCT -->
       <section id="product-information">
