--- a/redcorshiplus.html
+++ b/redcorshiplus.html
@@ -94,17 +94,17 @@
                      <h2>Buy <strong>2 bottles get 1 FREE</strong> of the same kind</h2>
                      <div id="price-timeline">
                         <div class="price">
-                           <h3><a href="cordycepsgold.html" id="discount-title">Cordyceps Gold</a> <br /><small>2 + 1 FREE</small></h3>
+                           <h3><a href="cordycepsgold.html" class="discount-title">Cordyceps Gold</a><br /><small>2 + 1 FREE</small></h3>
 
                            <span>$90</span>
                         </div>
                         <div class="price">
-                           <h3><a href="redcorshiplus.html" id="discount-title">Red Corshi Plus <br /><small>2 + 1 FREE</small></h3>
+                           <h3><a href="redcorshiplus.html" class="discount-title">Red Corshi Plus</a><br /><small>2 + 1 FREE</small></h3>
 
                            <span>$120</span>
                         </div>
                         <div class="price">
-                           <h3><a href="omega.html" id="discount-title">Omega-3 <br />
+                           <h3><a href="omega.html" class="discount-title">Omega-3</a><br />
                               <small>2 + 1 FREE</small></h3>
 
                            <span>$40</span>
